fixed overflow on top part of items

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ html {
 .item{
     height:100vh;
     position: relative;
+    overflow: hidden;
 }
 
 #first{
